<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/avataar_description"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    tools:text="mixmix" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    tools:text="I’m not here to frack spiders, au, you don’t know his story, bro. Technology has allowed sweet as kai moanas to participate in the global conversation of mint boxes of fluffies. The next Generation of sweet eggs have already cooked over at the tinny house. What’s the hurry Bazza? There’s plenty of cookie times in the wop wops. Mt Cook holds the most rip-off community in the country.. Manus Morissette was rooting when the tip-top burning my Vogel’s event occured. Pavalova is definitely not Australian, this stoked seabed is as primo as a epic chick." />

                <TextView
                    android:id="@+id/pubKeyTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/nameTextView"
                    app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                    tools:text="\@U5GvOKP/YUza9k53DSXxT0mk3PIrnyAmessvNfZl5E0=.ed25519" />

                <TextView
                    android:id="@+id/followCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/nameTextView"
                    app:layout_constraintTop_toBottomOf="@+id/pubKeyTextView"
                    tools:text="21" />

                <TextView
                    android:id="@+id/followingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/following"
                    app:layout_constraintStart_toEndOf="@+id/followCountTextView"
                    app:layout_constraintTop_toTopOf="@+id/followCountTextView" />

                <TextView
                    android:id="@+id/followersCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@+id/followingTextView"
                    app:layout_constraintTop_toTopOf="@+id/followCountTextView"
                    tools:text="33" />

                <TextView
                    android:id="@+id/followersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/followers"
                    app:layout_constraintStart_toEndOf="@+id/followersCountTextView"
                    app:layout_constraintTop_toTopOf="@+id/followCountTextView" />


                <TextView
                    android:id="@+id/blockCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/followCountTextView"
                    app:layout_constraintTop_toBottomOf="@+id/followCountTextView"
                    tools:text="12" />

                <TextView
                    android:id="@+id/blockingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/blocking"
                    app:layout_constraintStart_toEndOf="@+id/blockCountTextView"
                    app:layout_constraintTop_toTopOf="@+id/blockCountTextView" />

                <TextView
                    android:id="@+id/blockersCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@+id/blockingTextView"
                    app:layout_constraintTop_toTopOf="@+id/blockCountTextView"
                    tools:text="1" />

                <TextView
                    android:id="@+id/blockersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/blockers"
                    app:layout_constraintStart_toEndOf="@+id/blockersCountTextView"
                    app:layout_constraintTop_toTopOf="@+id/blockCountTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:icon="@drawable/ic_public_black_24dp"
                android:text="@string/posts" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:icon="@drawable/ic_notifications_none_black_24dp"
                android:text="@string/mentions" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            tools:itemCount="6"
            tools:listitem="@layout/fragment_thread_summary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>