<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nz.scuttlebutt.android_go.ThreadSummaryFragment">

    <data>
        <variable name="node" type="com.sunrisechoir.graphql.ThreadsQuery.Node"/>
    </data>

    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/author_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{node.root().author().name()}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/author_image"
                app:layout_constraintTop_toTopOf="@+id/author_image"
                tools:text="Mixmix" />

            <ImageView
                android:id="@+id/author_image"
                android:layout_width="@dimen/avataar_width"
                android:layout_height="@dimen/avataar_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/avataar_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/root_post_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@{node.root().text()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/author_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/post_text" />

            <ImageView
                android:id="@+id/likes_icon_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/likes_count_description"
                android:src="@android:drawable/btn_star_big_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/root_post_text"
                app:layout_constraintTop_toBottomOf="@+id/root_post_text" />

            <TextView
                android:id="@+id/likes_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{node.root().likesCount()"
                app:layout_constraintBottom_toBottomOf="@+id/likes_icon_image"
                app:layout_constraintStart_toEndOf="@+id/likes_icon_image"
                app:layout_constraintTop_toTopOf="@+id/likes_icon_image"
                tools:text="22" />

            <ImageView
                android:id="@+id/replies_icon_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_comment_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/likes_icon_image"
                app:layout_constraintStart_toEndOf="@+id/likes_count_text"
                app:layout_constraintTop_toTopOf="@+id/likes_icon_image" />

            <TextView
                android:id="@+id/replies_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{node.replies().size()}"
                app:layout_constraintBaseline_toBaselineOf="@+id/likes_count_text"
                app:layout_constraintStart_toEndOf="@+id/replies_icon_image"
                tools:text="3" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:foreground="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>