<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.PostFragment">

    <data>
        <variable
            name="post"
            type="nz.scuttlebutt.android_go.models.Post" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/author_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{post.authorName}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/author_image"
                app:layout_constraintTop_toTopOf="@+id/author_image"
                tools:text="Mixmix" />

            <ImageView
                android:id="@+id/author_image"
                android:layout_width="@dimen/avataar_width"
                android:layout_height="@dimen/avataar_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/avataar_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person_black_24dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/root_post_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/author_image"
                app:layout_constraintTop_toBottomOf="@+id/author_name_text"
                tools:text="@string/post_text" />

            <ImageView
                android:id="@+id/likes_icon_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/likes_count_description"
                android:src="@drawable/ic_favorite_border_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/replies_icon_image"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="@+id/root_post_text"
                app:layout_constraintTop_toBottomOf="@+id/root_post_text"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/likes_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{Integer.toString(post.likesCount)}"
                app:layout_constraintBottom_toBottomOf="@+id/likes_icon_image"
                app:layout_constraintStart_toEndOf="@+id/likes_icon_image"
                app:layout_constraintTop_toTopOf="@+id/likes_icon_image"
                tools:text="22" />

            <ImageView
                android:id="@+id/replies_icon_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:src="@drawable/ic_comment_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/likes_icon_image"
                app:layout_constraintEnd_toStartOf="@+id/backlink_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/likes_icon_image"
                app:layout_constraintTop_toTopOf="@+id/likes_icon_image"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/replies_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{Integer.toString(post.repliesCount)}"
                app:layout_constraintBaseline_toBaselineOf="@+id/likes_count_text"
                app:layout_constraintStart_toEndOf="@+id/replies_icon_image"
                tools:text="3" />

            <ImageView
                android:id="@+id/backlink_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:src="@drawable/ic_link_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/replies_icon_image"
                app:layout_constraintStart_toEndOf="@+id/replies_icon_image"
                app:layout_constraintTop_toTopOf="@+id/replies_icon_image" />

            <TextView
                android:id="@+id/backlinks_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{Integer.toString(post.referencesLength)}"
                app:layout_constraintBaseline_toBaselineOf="@+id/likes_count_text"
                app:layout_constraintStart_toEndOf="@+id/backlink_image"
                tools:text="22" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:foreground="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</layout>


